# ring/letters/api/letter.py
@@ -18,11 +18,13 @@ from sqlalchemy import ColumnElement, and_, or_
 from ring.api_identifier import (
     util as api_identifier_crud,
 )
+from ring.authz.authz import bulk_load_and_check
+from ring.authz.enforcer import Action
 from ring.fastapp.dependencies import (
     AuthenticatedRequestDependencies,
     get_request_dependencies,
 )
-from ring.letters.constants import LetterStatus
+from ring.letters.constants import LetterStatus, LetterType
 from ring.letters.crud import letter as letter_crud
 from ring.letters.crud import question as question_crud
 from ring.letters.models.letter_model import Letter
@@ -77,6 +79,31 @@ async def add_next_letter(
         group_api_id=letter.group_api_identifier,
         send_at=letter.send_at,
         letter_status=LetterStatus.UPCOMING,
+    )
+    req_dep.db.commit()
+    return db_letter
+
+
+@router.post("/letter:{letter_type}", response_model=LetterSchema)
+async def add_next_letter(
+    letter_type: LetterType,
+    letter: LetterCreate,
+    req_dep: AuthenticatedRequestDependencies = Depends(
+        get_request_dependencies,
+    ),
+) -> Letter:
+    [db_group] = bulk_load_and_check(
+        req_dep.db,
+        req_dep.current_user,
+        Action.READ,
+        letter.group_api_identifier,
+    )
+    db_letter = letter_crud.create_letter(
+        req_dep.db,
+        group_api_id=db_group.api_identifier,
+        send_at=letter.send_at,
+        letter_status=LetterStatus.UPCOMING,
+        letter_type=letter_type,
     )
     req_dep.db.commit()
     return db_letter
